--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack -p 9002",
-    "build": "NODE_ENV=production next build",
-    "start": "next start",
+    "build": "next build",
+    "start": "next start -p $PORT",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "vercel-build": "next build"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
